--- a/Projeto 2/GAME MARIO/HTML/index.html
+++ b/Projeto 2/GAME MARIO/HTML/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Projeto 2/GAME MARIO/CSS/style.css">
     <link rel="shortcut icon" href="/Projeto 2/GAME MARIO/IMAGENS/favicon.ico" type="image/x-icon">
-    <script src="/Projeto 2/GAME MARIO/JS/script.js"></script>
+    <script src="script.js"></script>
 
     <title>Mario Jump</title>
 </head>
 <body>
     <div class="game-board">
-
+        <img src="/Projeto 2/GAME MARIO/IMAGENS/mario.gif" class="mario">
         <img src="/Projeto 2/GAME MARIO/IMAGENS/pipe.png" class="pipe">
-        <img src="/Projeto 2/GAME MARIO/IMAGENS/mario.gif" alt="">
-
     </div>
 </body>
 </html>
