--- a/Projeto 2/HTML/index.html
+++ b/Projeto 2/HTML/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="game-board">
+        <button><a href="index.html" class="restart" id="restart">Restart</a></button>
         <img src="/Projeto 2/IMAGENS/clouds.png" class="clouds">
         <img src="/Projeto 2/IMAGENS/mario.gif" class="mario">
         <img src="/Projeto 2/IMAGENS/pipe.png" class="pipe">
